# sbom-cli

./: .gitignore  CLAUDE.md  ClaudeLogs.md  README.md  mise.toml  pyproject.toml
src/sbom_cli/: main.py
src/sbom_cli/commands/: ingest.py  query.py
src/sbom_cli/db/: __init__.py  models.py  repository.py  schema.py
src/sbom_cli/lib/: sbom.py  utils.py
src/sbom_cli/subcommands/: example.py
tests/fixtures/: sample-cdx-1.6-second.json  sample-cdx-1.6.json
tests/sbom_cli/: test_e2e.py
tests/sbom_cli/commands/: test_ingest.py  test_query.py
tests/sbom_cli/db/: test_repository.py
tests/sbom_cli/lib/: test_sbom.py  test_utils.py
