[project]
name = "sbom-cli"
version = "0.1.0"
description = "Manifest Cyber sbom-cli"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rich>=15.0.0",
    "typer>=0.24.2",
]

[project.scripts]
sbom-cli = "sbom_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sbom_cli"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
